--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "@react-native-community/cameraroll",
+  "name": "@hg/react-native-cameraroll",
   "author": "Bartol Karuza <bartol.k@gmail.com>",
   "homepage": "https://github.com/react-native-community/react-native-cameraroll#readme",
-  "version": "4.1.2",
+  "version": "0.0.1",
   "description": "React Native Camera Roll for iOS & Android",
   "main": "./js/CameraRoll.js",
   "types": "./typings/CameraRoll.d.ts",
+  "publishConfig": {
+    "registry": "https://ops-nexus.hypergryph.net/repository/npm-hosted/"
+  },
   "scripts": {
     "start": "react-native start",
     "start:android": "react-native run-android --root example/",
